[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6"
thiserror = "1.0"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json"] }
dotenv = "0.15"