[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6"
thiserror = "1.0"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json"] }
dotenv = "0.15"
log = "0.4.17"
chrono =  { version="0.4", features=["serde"] }
tower-http = { version="0.4.0", features=["cors"] }
rust-argon2 = "1.0"
nanoid = "0.4.0"
lazy_static = "1.4.0"
